
Version beta 2

- Completely rewritten

Version beta 1

- Test cases simplified by the introduction of facilityconfig.xml

Alpha Version 1.0.0
- First release

Future modifications - after the first release - shall be tracked in this file